--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <!--R1D2-->
+<body onload="displayZero();">
+    <h1>JavaScript Calculator</h1>
     <main>
-        <div id="display">0</div>
+        <div id="display"></div>
         <div id="keypad">
-            <button class="clear-all">AC</button>
-            <button class="clear">C</button>
+            <button onclick="clearAll();" id="clear-all-button">AC</button>
+            <button onclick="clearEntry();" id="clear-button">C</button>
             <button onclick="divide();" class="operation">/</button>
             <br>
             <button onclick="displayInt('7');" class="integer">7</button>
@@ -33,8 +33,8 @@
             <button onclick="displayInt('3');" class="integer">3</button>
             <button onclick="add();" class="operation">+</button>
             <br>
-            <button onclick="displayInt('0');" class="integer">0</button>
-            <button onclick="displayAnswer();" class="operation">=</button>
+            <button onclick="displayInt('0');" id="zero-button">0</button>
+            <button onclick="displayAnswer();" id="equal-button">=</button>
         </div>
     </main>
     <script>
@@ -44,11 +44,28 @@
         var num1 = 0;
         var num2 = 0;
 
+        // function displays a zero on load
+        function displayZero() {
+            display.textContent = '0';
+        }
+
         // function displays integer on the display
         function displayInt(integer) {
+            checkIntSize();
             display.textContent = display.textContent + integer;
+
             num1 = display.textContent;
-            console.log(num1);
+            console.log(num1);            
+        }
+
+        function removeZero()  {
+            display.textContent = '';
+        }
+
+        function checkIntSize() {
+            if (display.textContent > 999999) {
+                alert('Yikes! Too many digits for this calculator.');
+            }
         }
 
         // function divides two integers
@@ -69,6 +86,14 @@
         // function adds two integers
         function add() {
             // addition
+        }
+
+        function clearEntry() {
+            displayZero();
+        }
+
+        function clearAll() {
+            displayZero();
         }
 
         // function displays answer
