Condensed code. All operator buttons have the same class.

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         <div id="keypad">
             <button id="clear-all-button">AC</button>
             <button id="clear-button">C</button>
-            <button id="divide">/</button>
+            <button class="operator" value="/">/</button>
             <br>
             <button class="integer" value="7">7</button>
             <button class="integer" value="8">8</button>
             <button class="integer" value="9">9</button>
-            <button id="multiply">x</button>
+            <button class="operator" value="*">*</button>
             <br>
             <button class="integer" value="4">4</button>
             <button class="integer" value="5">5</button>
-            <button class="integer" value="5">6</button>
-            <button id="subtract">-</button>
+            <button class="integer" value="6">6</button>
+            <button class="operator" value="-">-</button>
             <br>
             <button class="integer" value="1">1</button>
             <button class="integer" value="2">2</button>
             <button class="integer" value="3">3</button>
-            <button id="add">+</button>
+            <button class="operator" value="+">+</button>
             <br>
             <button class="integer" value="0">0</button>
-            <button id="equal-button">=</button>
+            <button class="operator" value="=">=</button>
         </div>
     </main>
 
