Condensed code. All operator buttons have the same class.

--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
 <body>
     <h1>JavaScript Calculator</h1>
     <main>
-        <div id="display">0</div>
-        <div id="keypad">
-            <button id="clear-all-button">AC</button>
-            <button id="clear-button">C</button>
-            <button id="divide">/</button>
+        <input type="text" class="display" value="" disabled>
+        <div class="keypad">
+            <button type="button" class="clear-all-button" value="clear-all"> AC</button>
+            <button type="button" class="clear-button" value="clear">C</button>
+            <button type="button" value="/">/</button>
             <br>
-            <button class="integer" value="7">7</button>
-            <button class="integer" value="8">8</button>
-            <button class="integer" value="9">9</button>
-            <button id="multiply">x</button>
+            <button type="button" value="7">7</button>
+            <button type="button" value="8">8</button>
+            <button type="button" value="9">9</button>
+            <button type="button" value="*">*</button>
             <br>
-            <button class="integer" value="4">4</button>
-            <button class="integer" value="5">5</button>
-            <button class="integer" value="5">6</button>
-            <button id="subtract">-</button>
+            <button type="button" value="4">4</button>
+            <button type="button" value="5">5</button>
+            <button type="button" value="6">6</button>
+            <button type="button" value="-">-</button>
             <br>
-            <button class="integer" value="1">1</button>
-            <button class="integer" value="2">2</button>
-            <button class="integer" value="3">3</button>
-            <button id="add">+</button>
+            <button type="button" value="1">1</button>
+            <button type="button" value="2">2</button>
+            <button type="button" value="3">3</button>
+            <button type="button" value="+">+</button>
             <br>
-            <button class="integer" value="0">0</button>
-            <button id="equal-button">=</button>
+            <button type="button" value="0">0</button>
+            <button type="button" class="equal-button" value="=">=</button>
         </div>
     </main>
 
