Updated functions and css style.

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
     <main>
         <input type="text" class="display" value="" disabled>
         <div class="keypad">
-            <button type="button" class="clear-all-button" value="clear-all"> AC</button>
-            <button type="button" class="clear-button" value="clear">C</button>
-            <button type="button" value="/">/</button>
+            
+            <button type="button" value="/">/</button> 
+            <button type="button" value="*">x</button>
+            <button type="button" value="-">-</button>
+            <button type="button" value="+">+</button>
             <br>
             <button type="button" value="7">7</button>
             <button type="button" value="8">8</button>
             <button type="button" value="9">9</button>
-            <button type="button" value="*">*</button>
+            <button type="button" class="clear-all-button" value="clear-all">AC</button>
             <br>
             <button type="button" value="4">4</button>
             <button type="button" value="5">5</button>
             <button type="button" value="6">6</button>
-            <button type="button" value="-">-</button>
+            <button type="button" class="equal-button" value="=">=</button>
             <br>
             <button type="button" value="1">1</button>
             <button type="button" value="2">2</button>
             <button type="button" value="3">3</button>
-            <button type="button" value="+">+</button>
             <br>
-            <button type="button" value="0">0</button>
-            <button type="button" class="equal-button" value="=">=</button>
+            <button type="button" class="zero-button" value="0">0</button>
         </div>
     </main>
 
